--- a/InvestmentTracker/Pages/Expenses/IncomeSources.cshtml
+++ b/InvestmentTracker/Pages/Expenses/IncomeSources.cshtml
@@ -9,7 +9,8 @@
 
 <div class="row">
     <div class="col-md-8">
-        <table class="table">
+    <div class="table-responsive">
+    <table class="table">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -26,15 +27,18 @@
                         <td>@source.ExpectedAmount.ToString("N2")</td>
                         <td>@source.Currency</td>
                         <td>
-                            <a asp-page="./EditIncomeSource" asp-route-id="@source.Id" class="btn btn-sm btn-secondary">Edit</a>
-                            <form method="post" asp-page-handler="Delete" asp-route-id="@source.Id" class="d-inline" data-confirm="Delete this income source? This will also remove all associated monthly income records." data-loading="Deleting income source...">
-                                <button type="submit" class="btn btn-sm btn-danger">Delete</button>
-                            </form>
+                            <div class="d-flex flex-wrap align-items-center gap-2">
+                                <a asp-page="./EditIncomeSource" asp-route-id="@source.Id" class="btn btn-sm btn-secondary">Edit</a>
+                                <form method="post" asp-page-handler="Delete" asp-route-id="@source.Id" class="d-inline" data-confirm="Delete this income source? This will also remove all associated monthly income records." data-loading="Deleting income source...">
+                                    <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                                </form>
+                            </div>
                         </td>
                     </tr>
                 }
             </tbody>
-        </table>
+    </table>
+    </div>
     </div>
     <div class="col-md-4">
         <div class="card">
