--- a/InvestmentTracker/Pages/Values/Index.cshtml
+++ b/InvestmentTracker/Pages/Values/Index.cshtml
@@ -31,6 +31,7 @@
         <a class="btn btn-secondary" asp-page="/Investments/List">Back to Investments</a>
     </div>
 </form>
+<div class="table-responsive">
 <table class="table table-striped table-sm">
     <thead>
         <tr>
@@ -82,6 +83,7 @@
     }
     </tbody>
 </table>
+</div>
 
 <nav aria-label="Values pagination">
     <ul class="pagination">
